# hpc

./: README.md
Parallel Programming/OpenMPI/: 01-Helloworld.cpp  02-trapezoidal_parallel.cpp  02-trapezoidal_serial.cpp  03-matrix_multipliaction_parallel_rowDecom.cpp  03-matrix_multiplication_serial.cpp  Brodcast.cpp  DerivedDataType.cpp  Gather.cpp  Scatter.cpp  allreduce.cpp  reduce.cpp
Parallel Programming/OpenMPI/Kobayashi/: IO.hpp  KOBAYASHI.hpp  SOL_INIT.hpp  WRITER.hpp  main.cpp  phase_serial.vtk  solidification_parallel.cpp  solidification_serial.cpp
Parallel Programming/SYCL/Heat_eq_fdm/: Final_Output.vtk  Output_0.vtk  Output_1000.vtk  Output_1500.vtk  Output_500.vtk  README.md  a.out  heat.h  io.h  main.cpp  setup.h  solve.h  utilities.h
Parallel Programming/SYCL/wave_eq_FDM/: CMakeLists.txt
Parallel Programming/SYCL/wave_eq_FDM/include/: saveVTK.hpp
Parallel Programming/SYCL/wave_eq_FDM/src/: a.out  iso_2d_fd.cpp
topics/: OpenMPI.md  sycl.md
